# windturbine-optimization

./: .cache.sqlite  .gitignore  LICENSE  README.md  cache.sqlite  pyproject.toml  requirements.txt  startup.txt
.github/workflows/: main_turbine-capacity-pred.yml  main_turbinecapacity-pred.yml  main_turbinecapacity-predictor.yml
app/: app.py
data/interim/: turbine_data.csv  weatherloc_stats.csv
data/interim/turbinelocsplit/: tdf1.csv  tdf2.csv  tdf3.csv  tdf4.csv
data/processed/: fin_data.csv
data/raw/: TX_turbines_raw.csv
data/raw/weatherlocsplit/: wdf1.csv  wdf2.csv  wdf3.csv  wdf4.csv
models/: treereg.pkl
notebooks/turbineexploration/: eda_turbine.ipynb
notebooks/windgeneration/: windgen.csv  windgeneration.ipynb
references/: datadictionary.md
src/data/: get_turbinedata.py  get_weatherdata.py  preprocess_data.py
src/modelling/: modelling.py
src/visualization/: windgenplot.py
windturbineoptimization/: app.py
windturbineoptimization/templates/: index.html  result.html
