[tool.poetry]
name = "windturbineoptimization"
version = "0.1.0"
description = "Optimizing Wind Turbine placement based on historical data"
authors = ["Fatin Yasin"]
readme = "README.md"



[tool.poetry.dependencies]
python = ">=3.12,<3.13"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
requests = "^2.32.3"
lxml = "^5.2.2"
matplotlib = "^3.9.1.post1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
openmeteo-requests = "^1.3.0"
requests-cache = "^1.2.1"
retry-requests = "^2.0.0"
tqdm = "^4.66.5"
flask = "^3.0.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
